# my-ctf-challenges

./: README.md
0ctf-2025/0Pages/: .secretkey  000-default.conf  Cargo.toml  Dockerfile  README.md  exp.py  flag  readflag.c
0ctf-2025/0Pages/src/: controller.rs  main.rs  model.rs  router.rs  service.rs
0ctf-2025/0Pages/static/: dashboard.html  index.html  login.html  register.html  style.css
0ctf-2025/GhostDB/: README.md  flag
0ctf-2025/ezupload/: Caddyfile  Dockerfile  README.md  exp.py  flag  index.php  php.ini  readflag.c
