[package]
name = "zero-pages"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.80.0", features = [
  "session",
  "serve-static",
  "oapi",
  "size-limiter",
  "affix-state",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"
zip = "6.0.0"
